force-app/main/default/objects/Account/fields/alias_name__c.field-meta.xml
<CustomField>
    <fullName>alias_name__c</fullName>
    <label>alias name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>