force-app/main/default/objects/Account/fields/client_name__c.field-meta.xml
<CustomField>
    <fullName>client_name__c</fullName>
    <label>client name</label>
    <length>26</length>
    <type>Text</type>
</CustomField>