force-app/main/default/objects/Account/fields/company_url__c.field-meta.xml
<CustomField>
    <fullName>company_url__c</fullName>
    <label>company url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>