force-app/main/default/objects/Account/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <label>mobile</label>
    <type>Phone</type>
</CustomField>